# web2.0_homework_13

part_1/: main.py  pyproject.toml
part_1/alembic/versions/: 8c62b5fef7c6_init.py
part_1/src/database/: connect.py
part_1/src/repository/: contacts.py  users.py
part_1/src/routes/: auth.py  contacts.py  users.py
part_1/src/services/: auth.py  email.py
part_2/: authors.json  main_parser.py  pyproject.toml  seed.py  test.py
part_2/database/: models.py
part_2/quotes/quoteapp/: forms.py  models.py  urls.py  views.py
part_2/quotes/quoteapp/templates/quoteapp/: author.html  authoradd.html  base.html  detail.html  index.html  quote.html  tag.html
part_2/quotes/quotes/: settings.py  urls.py
part_2/quotes/users/: forms.py  views.py
part_2/quotes/users/migrations/: 0001_initial.py
