[tool.poetry]
name = "part-1"
version = "0.1.0"
description = ""
authors = ["AndrewCheUA <andreicheban@gmail.com>"]
readme = "README.md"
packages = [{include = "part_1"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
psycopg2 = "^2.9.5"
sqlalchemy = "^2.0.4"
fastapi-mail = "^1.2.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = {extras = ["email"], version = "^1.10.5"}
uvicorn = {extras = ["standard"], version = "^0.20.0"}
libgravatar = "^1.0.3"
alembic = "^1.9.4"
fastapi-limiter = "^0.1.5"
redis-lru = "^0.1.2"
cloudinary = "^1.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
